SPA-1410. Layout issue on pass tile.

--- a/src/app/pass-tile/pass-tile.component.scss
+++ b/src/app/pass-tile/pass-tile.component.scss
@@ -41,9 +41,15 @@
 }
 
 .tile-title{
-    font-weight: bold;
-    font-size: 16px;
-    margin-bottom: 3px;
+  margin-top: 12px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-align: center;
+  width: 130px;
+  overflow: hidden;
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 3px;
 }
 
 .tile-type {
